# fashion-geometry

./: .gitmodules  CMakeLists.txt  adaption2D_CLO_to_MH_woman_5_3_skirt.mtl  example  main.cpp
build-new/: CMakeCache.txt  Makefile  cmake_install.cmake  coloredGarment_avatar_maternity_01_OC_dress_stress_in_stressMax_pattern.mtl  coloredGarment_avatar_maternity_01_OC_dress_stress_in_u.mtl  coloredGarment_avatar_maternity_01_OC_dress_stress_in_v_pattern.mtl  setupFileavatar_maternity_01_OC_leggins.txt  setupFileavatar_oneComponent_dress_4.txt  setupFileavatar_plus_straight_05_OC_leggins.txt  setupFileavatar_plus_straight_05_OC_skirt_3.txt  stressOfAdapted_avatar_maternity_01_OC_dress_stress_in_u.mtl  stressOfAdapted_avatar_missy_straight_05_OC_skirt_3_stress_in_u.mtl  stressOfAdapted_avatar_oneComponent_dress_stress_in_u.mtl  stressOfAdapted_avatar_oneComponent_skirt_3_stress_in_u.mtl  stressOfAdapted_avatar_plus_straight_05_OC_skirt_3_stress_in_u.mtl
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
buildNew/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: FindGurobi.cmake
data/CLO_avatars/: avatar.mtl
data/CLO_avatars_oneComponent/: CLO_avatar_to_bodyScan_Anna_rem 2.ply  CLO_avatar_to_bodyScan_Anna_rem 2_left.ply  CLO_avatar_to_bodyScan_Anna_rem 2_right.ply  CLO_avatar_to_bodyScan_Luka_rem.ply  CLO_avatar_to_bodyScan_Luka_rem_left.ply  CLO_avatar_to_bodyScan_Luka_rem_right.ply  CLO_avatar_to_bodyScan_Mark_rem.ply  CLO_avatar_to_bodyScan_Mark_rem_left.ply  CLO_avatar_to_bodyScan_Mark_rem_right.ply  CLO_avatar_to_bodyScan_Nico_rem.ply  CLO_avatar_to_bodyScan_Nico_rem_left.ply  CLO_avatar_to_bodyScan_Nico_rem_right.ply  CLO_avatar_to_bodyScan_Paola_rem.ply  CLO_avatar_to_bodyScan_Paola_rem_left.ply  CLO_avatar_to_bodyScan_Paola_rem_left_old.ply  CLO_avatar_to_bodyScan_Paola_rem_right.ply  CLO_avatar_to_bodyScan_Raphael_rem.ply  CLO_avatar_to_bodyScan_Raphael_rem_left.ply  CLO_avatar_to_bodyScan_Raphael_rem_right.ply  CLO_avatar_to_bodyScan_Teresa_rem_3.ply  CLO_avatar_to_bodyScan_Teresa_rem_3_left.ply  CLO_avatar_to_bodyScan_Teresa_rem_3_right.ply  CLO_avatar_to_male_large_avatar_rem_20.ply  CLO_avatar_to_male_large_avatar_rem_20_left.ply  CLO_avatar_to_male_large_avatar_rem_20_right.ply  CLO_to_MH_Girl17.ply  CLO_to_MH_Girl17_left.ply  CLO_to_MH_Girl17_right.ply  CLO_to_MH_Girl24.ply  CLO_to_MH_Girl24Curvy.ply  CLO_to_MH_Girl24Curvy_left.ply  CLO_to_MH_Girl24Curvy_right.ply  CLO_to_MH_Girl24Shoulder.ply  CLO_to_MH_Girl24Shoulder_left.ply  CLO_to_MH_Girl24Shoulder_right.ply  CLO_to_MH_Girl24_left.ply  CLO_to_MH_Girl8.ply  CLO_to_MH_Girl89.ply  CLO_to_MH_Girl89_left.ply  CLO_to_MH_Girl89_right.ply  (+69 more)
data/CLO_avatars_oneComponent/5x5Morphed/: CLO_to_MH_woman_1_1.ply  CLO_to_MH_woman_1_1_left.ply  CLO_to_MH_woman_1_1_right.ply  CLO_to_MH_woman_1_2.ply  CLO_to_MH_woman_1_2_left.ply  CLO_to_MH_woman_1_2_right.ply  CLO_to_MH_woman_1_3.ply  CLO_to_MH_woman_1_3_left.ply  CLO_to_MH_woman_1_3_right.plt.ply  CLO_to_MH_woman_1_3_right.ply  CLO_to_MH_woman_1_4.ply  CLO_to_MH_woman_1_4_left.ply  CLO_to_MH_woman_1_4_right.ply  CLO_to_MH_woman_1_5.ply  CLO_to_MH_woman_1_5_left.ply  CLO_to_MH_woman_1_5_right.ply  CLO_to_MH_woman_2_1.ply  CLO_to_MH_woman_2_1_left.ply  CLO_to_MH_woman_2_1_right.ply  CLO_to_MH_woman_2_2.ply  CLO_to_MH_woman_2_2_left.ply  CLO_to_MH_woman_2_2_right.ply  CLO_to_MH_woman_2_3.ply  CLO_to_MH_woman_2_3_left.ply  CLO_to_MH_woman_2_3_right.ply  CLO_to_MH_woman_2_4.ply  CLO_to_MH_woman_2_4_left.ply  CLO_to_MH_woman_2_4_right.ply  CLO_to_MH_woman_2_5.ply  CLO_to_MH_woman_2_5_left.ply  CLO_to_MH_woman_2_5_right.ply  CLO_to_MH_woman_3_1.ply  CLO_to_MH_woman_3_1_left.ply  CLO_to_MH_woman_3_1_right.ply  CLO_to_MH_woman_3_2.ply  CLO_to_MH_woman_3_2_left.ply  CLO_to_MH_woman_3_2_right.ply  CLO_to_MH_woman_3_3.ply  CLO_to_MH_woman_3_3_left.ply  CLO_to_MH_woman_3_3_right.ply  (+36 more)
data/CLO_avatars_oneComponent/5x5Woman/: woman_1_1.ply  woman_1_2.ply  woman_1_3.ply  woman_1_4.ply  woman_1_5.ply  woman_2_1.ply  woman_2_1_smoothed.ply  woman_2_2.ply  woman_2_3.ply  woman_2_4.ply  woman_2_5.ply  woman_3_1.ply  woman_3_2.ply  woman_3_3.ply  woman_3_4.ply  woman_3_5.ply  woman_4_1.ply  woman_4_2.ply  woman_4_3.ply  woman_4_4.ply  woman_4_5.ply  woman_5_1.ply  woman_5_2.ply  woman_5_3.ply  woman_5_4.ply  woman_5_5.ply
data/CLO_avatars_oneComponent/TeaserAvatarsRes/: CLO_to_MH_Girl24_right.ply  CLO_to_MH_girlMidAgeCurvyTall.ply  CLO_to_MH_girlMidAgeCurvyTall_left.ply  CLO_to_MH_girlMidAgeCurvyTall_right.ply  CLO_to_MH_girlOld.ply  CLO_to_MH_girlOld_left.ply  CLO_to_MH_girlOld_right.ply  CLO_to_MH_girlPetite.ply  CLO_to_MH_girlPetite_left.ply  (+4 more)
data/garment/: full.mtl  pants.obj.mtl  pants_2D.mtl  tshirt.obj.mtl  tshirt_2D.mtl
data/moreGarments/: dress_4.tar.xz  man_tshirt2.tar.xz  skirt_1.tar.xz  top_2.tar.xz
data/morphingAvatarAndDressNOPattern/: aShapeDressBetter
data/tests/: square_2D.ply
toolbox/: MathFunctions.cpp  MathFunctions.h  PositionBasedDynamics.cpp  PositionBasedDynamics.h  TimeIntegration.cpp  TimeIntegration.h  Timer.cpp  Timer.h  adjacency.cpp  adjacency.h  body_interpolation.cpp  body_interpolation.h  constraint_utils.cpp  constraint_utils.h  exportFunctions.cpp  exportFunctions.h  garment_adaption.cpp  garment_adaption.h  patternAdaption.cpp  patternAdaption.h  postProcessing.cpp  postProcessing.h  preProcessing.cpp  preProcessing.h  seam.cpp  seam.h
triangle/: showme  triangle
(+59 files in other folders)
